[package]
name = "sef"
version = "0.1.0"
authors = ["Abeeujah <abeeujah@gmail.com>"]
repository = "https://github.com/abeeujah/sef"
description = "A Secure Fountain Architecture for Slashing Storage Costs in Blockchains"
edition = "2024"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
bitcoin = {version = "0.32", features = ["std"]}
